--- a/index.html
+++ b/index.html
@@ -8,11 +8,26 @@
 	<div id="steave">
 		<div id="1">
 			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
 		</div>
 		<div id="2">
 			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
 		</div>
 		<div id="3">
+			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
+			<img src="1.jpg">
 			<img src="1.jpg">
 		</div>
 	</div>
